# TheApprentice

./: README.md
Output/: .gitignore  BichoPalo.psd  Broodheart.cpp  Broodheart.h  CMakeLists.txt  Menus.cpp  Menus.h  NullwardenCrystal.cpp  NullwardenCrystal.h  PlatformGame.vcxproj  PlatformGame.vcxproj.filters  TheApprentice.filters  TheApprentice.sln  TheApprentice.vcxproj  art.xml  config.xml  dialogues.xml  textures.xml  vcpkg.json
Output/Assets/Maps/: Escenario 3.tmx  Lianas_v3.tsx  Map-1.tmx  Map0.tmx  Map0_copy.tmx  Map1.tmx  Map12.tmx  Map13.tmx  Map14.tmx  Map21.tmx  Map22.tmx  Map23.tmx  Map23_Laia.tmx  Map31.tmx  Map41.tmx  Map42.tmx  Map43.tmx  Map51.tmx  Map52.tmx  Map666.tmx  Map6666.tmx  Map69.tmx  Map99.tmx  MapTemplate.tmx  Mapa43.tmx  Mpa43.tmx  Testing.tmx
Output/Assets/Parallax/: sky.tsx
Output/Assets/Props/: tiles nieve2.tsx  tiles_cave2.tsx  tiles_manglar2.tsx
Output/Assets/Slime/: slime.png.psd  slime.psd
Output/src/: AbilityZone.cpp  AbilityZone.h  Animation.h  AttackMechanic.cpp  AttackMechanic.h  Audio.cpp  Audio.h  Bloodrusher.cpp  Bloodrusher.h  Brood.cpp  Brood.h  Broodheart.cpp  Broodheart.h  CaveDrop.cpp  CaveDrop.h  Checkpoint.cpp  Checkpoint.h  Creebler.cpp  Creebler.h  DashMechanic.cpp  DashMechanic.h  DestructibleWall.cpp  DestructibleWall.h  DialogueManager.cpp  DialogueManager.h  Dreadspire.cpp  Dreadspire.h  DreadspireBullet.cpp  DreadspireBullet.h  DungBeetle.cpp  DungBeetle.h  DungBeetleBall.cpp  DungBeetleBall.h  DustParticle.cpp  DustParticle.h  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  Entity.h  (+113 more)
(+1 files in other folders)
